feat: redesign receipt PDF template for single-page rendering
- Replaced spaced-out layout with a clean, modern table-based design
- Configured PageSize.A5 with explicit 20f margins to avoid page overflow
- Created proper visual hierarchy (bold accents, professional typography)
- Reorganized components (Header, Customer details, Amount, Footer) to fit perfectly on exactly 1 page
- Verified that PDF generation outputs exactly 1 page without spillover